@@ -16,6 +16,7 @@ Peter Ross <pross@xvid.org>
 RuXu W <wrxzzj@gmail.com>
 Matthew Moore
 Colin Caughie <c.caughie@indigovision.com>
+David Carvalho <andaris@gmail.com>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
