@@ -81,7 +81,7 @@ extern "C"
 /**
  * Current version of the library.
  */
-#define MHD_VERSION 0x00040001
+#define MHD_VERSION 0x00040002
 
 /**
  * MHD-internal return codes.
@@ -89,6 +89,11 @@ extern "C"
 #define MHD_YES 1
 
 #define MHD_NO 0
+
+/**
+ * Constant used to indicate unknown size.
+ */
+#define MHD_SIZE_UNKNOWN  ((uint64_t) -1LL)
 
 /**
  * HTTP response codes.
@@ -959,7 +964,7 @@ MHD_queue_response (struct MHD_Connection *connection,
  * Create a response object.  The response object can be extended with
  * header information and then be used any number of times.
  *
- * @param size size of the data portion of the response, -1 for unknown
+ * @param size size of the data portion of the response, MHD_SIZE_UNKNOW for unknown
  * @param block_size preferred block size for querying crc (advisory only,
  *                   MHD may still call crc using smaller chunks); this
  *                   is essentially the buffer size used for IO, clients
